<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="searchHistory">История поиска</string>
    <string name="ClearHistory">Очистить</string>
    <string name="noSearch">Ничего не нашлось</string>
    <string name="internet">Ошибка сервера</string>
    <string name="retry">Обновить</string>
    <string name="trackTime">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="releaseDate">Дата релиза</string>
    <string name="genreName">Жанр</string>
    <string name="country">Страна</string>
</resources>