<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1B22"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:paddingTop="20dp"
            android:paddingBottom="44dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:translationX="70dp"
            android:translationY="15dp"
            tools:ignore="VisualLintBounds" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingEnd="18dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/blackThemeView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/sixteenDP"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/black_theme"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/themeSwitch"
            android:layout_width="56dp"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"
            tools:ignore="UseSwitchCompatOrMaterialXml"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/shareView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/sixteenDP"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/share_application"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/share"
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:visibility="visible"
            app:icon="@drawable/share"
            app:iconGravity="end"
            app:iconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/supportView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/sixteenDP"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/support"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sendToSupport"
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/support"
            app:iconGravity="end"
            app:iconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/userAgreementView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/sixteenDP"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/agreement"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/viewUserAgreement"
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"
            android:background="@color/white"
            android:backgroundTint="#FFFFFF"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/license"
            app:iconGravity="end"
            app:iconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
</LinearLayout>